step2/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: foo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "test.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: foo-destination
spec:
  host: foo-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo
spec:
  hosts:
  - "test.example.com"
  gateways:
  - foo-gateway
  http:
  - match:
    - uri:
        exact: /foo
    route:
    - destination:
        host: foo-service
        subset: v1
        port:
          number: 5678
      weight: 90
    - destination:
        host: foo-service
        subset: v2
        port:
          number: 5678
      weight: 10
